refactor: add some methods for get bean variables.